<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_item_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_item_clear"
        android:title="@string/clear_search"
        app:showAsAction="never" />

    <item android:id="@+id/menu_item_toggle_polling"
        android:title="@string/start_polling"
        app:showAsAction="ifRoom" />



    <item android:id="@+id/view_image"
        android:title="@string/view_image"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/area_locate"
        android:title="@string/area_locate"
        app:showAsAction="never" />




</menu>